--- a/crates/riscv-cpu/Cargo.toml
+++ b/crates/riscv-cpu/Cargo.toml
@@ -1,11 +1,8 @@
-workspace = { members = ["crates/riscv-cpu"] }
-
 [package]
-name = "rouns"
+name = "riscv-cpu"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-riscv-cpu = { path = "crates/riscv-cpu" }
