wup getting ecall
Signed-off-by: Sean Cross <sean@xobs.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 
 [dependencies]
 riscv-cpu = { path = "crates/riscv-cpu" }
+goblin = { version = "0.7.1", features = [ "std", "elf32", "alloc" ]}
