about to rip out the emulator
Signed-off-by: Sean Cross <sean@xobs.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 workspace = { members = ["crates/riscv-cpu"] }
 
 [package]
-name = "jurubas"
+name = "kritos"
 version = "0.1.0"
 edition = "2021"
 
