riscv-tests: get tests running
Signed-off-by: Sean Cross <sean@xobs.io>

--- a/crates/riscv-cpu/Cargo.toml
+++ b/crates/riscv-cpu/Cargo.toml
@@ -3,6 +3,7 @@ name = "riscv-cpu"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dev-dependencies]
+goblin = { version = "0.7.1", features = [ "std", "elf32", "alloc" ]}
 
 [dependencies]
