prune features from `goblin` requirements
Signed-off-by: Sean Cross <sean@xobs.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 workspace = { members = ["crates/riscv-cpu"] }
 
 [package]
-name = "kritos"
+name = "yove"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 riscv-cpu = { path = "crates/riscv-cpu" }
-goblin = { version = "0.7.1", features = [ "std", "elf32", "alloc" ]}
+goblin = { version = "0.7.1", features = [ "elf32" ]}
