--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 riscv-cpu = { path = "crates/riscv-cpu" }
 goblin = { version = "0.7.1", features = [ "elf32" ]}
+
+[profile.release]
+debug = 1
